# Aurora

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE  Makefile  README.md  cmake_install.cmake  compile_commands.json  core.json  global.h  jobs.json  json  log.txt  main  main.c  main_prog
engine/connectors/: README.md
engine/core/: README.md  main.c
engine/core/capture/: captrure.c  capture.h  sniffer
engine/core/capture/protocols/: protocol_mapper.c  protoheaders.h
engine/core/clientserver/: client  client.c  clientn  clientserver.h  server  server.c
engine/core/config/: config.c  config.h
engine/core/headers/: init.h
engine/core/init/: init.h  jobs_init.c  shared_memory  shared_memory.c
engine/core/init/tests/shared_memory/: alloc_free_flow  alloc_free_flow.c  multiple_appends  multiple_appends.c
engine/core/jobs/: cleaner_rootine.c  health_rootine.c  jobecycle.c  jobs.h  worker_rootine.c
engine/core/plugins/: here  plugins.c  plugins.h
engine/errors/: README.md
engine/helpers/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  btree  btree.c  client  cmake_install.cmake  data  data.c  files.c  hashmap  hashmap.c  helpers.h  json.c  promise.c  redis.c  redistest  res  seria  serializers.c  server  test.c  tmp  tmp.c
engine/helpers/tests/: promises.c
modules/basemodel/: module.c
